--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "todo-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://alexrixten.github.io/todo-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -16,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
